# aspera-api-examples

./: .aspera.dict  .cspell.json  .env  .gitignore  .openapiformat.sort.json  .openapiformat.sortcomponents.json  .prettierrc  .rubocop.yml  Makefile  README.md  aspera.dict  common.mak  common.make  config.tmpl
app/cpp/: .gitignore  BuildGrpc.cmake  CMakeLists.txt  Makefile  README.md  conanfile.txt
app/cpp/src/examples/: aoc.cpp  server.cpp
app/cpp/src/utils/: configuration.hpp  rest.hpp  transfer_client.hpp
app/csharp/: Makefile  README.md  csharp.csproj
app/csharp/src/: main.cs
app/csharp/src/Examples/: aoc.cs
app/csharp/src/Utils/: configuration.cs  rest.cs  transfer_client.cs
app/go/: Makefile  README.md  go.mod  go.sum
app/go/src/examples/: faspex5.go  server_cmd.go
app/go/src/utils/: configuration.go  rest.go  server.go  transfer_client.go
app/java/: .gitignore  Makefile  README.md  build.gradle  logging.properties
app/js/: Makefile  cos.js  package.json
app/js/src/examples/: aoc.js  cos.js  faspex5.js  node.js  node_v2.js  server.js  server_cmd.js  server_v2.js
app/js/src/utils/: configuration.js  rest.js  server.js  test_environment.js  transfer_client.js
app/python/: Makefile  README.md
app/python/src/examples/: aoc.py  cos_node_api.py  cos_v2.py  faspex.py  faspex5.py  node.py  node_v2.py  shares.py  shares_v2.py
app/python/src/utils/: configuration.py  helper_aspera_faspmanager_deprecated.py  rest.py  transfer_client.py
app/ruby/: .gitignore  Gemfile  Makefile  Readme.md
app/ruby/src/examples/: aoc.rb  faspex4.rb  faspex5.rb  node.rb  node_v2.rb  server.rb
app/ruby/src/utils/: configuration.rb  rest.rb  transfer_client.rb
app/rust/: Makefile  README.md  build.rs
app/rust/src/examples/: faspex5.rs  server_cmd.rs
app/rust/src/utils/: configuration.rs  mod.rs  transfer_client.rs
config/: config.tmpl  paths.yaml  sdkconf.tmpl
cpp/: .gitignore  BuildGrpc.cmake  CMakeLists.txt  Makefile  README.md  conanfile.txt  grpc_common.cmake
cpp/src/: node_v2.cpp  regular_file_example.cpp  server.cpp  shares.cpp  test_environment.hpp
cpp/src/examples/: faspex5.cpp  node_v2.cpp  server.cpp  shares.cpp
cpp/src/utils/: configuration.hpp  misc.hpp  rest.hpp  rest_client.hpp  test_environment.hpp  tools.hpp  transfer_client.hpp
csharp/: .gitignore  Makefile  README.md  csharp.csproj  main.cs  packages.config  rest.cs  sample.cs  sample_aoc.cs  sample_faspex5.cs  sample_server_upload.cs  test_environment.cs
csharp/src/Examples/: aoc.cs  faspex5.cs  server.cs
csharp/src/Samples/: aoc.cs  faspex5.cs  sample_aoc.cs  server.cs
csharp/src/Utils/: configuration.cs  rest.cs  transfer_client.cs
doc/: Faspex_flow.wsd_txt  Makefile  README.md  doc.rb  get_sdk.sh  oauth_diagrams.txt  transferd-config.schema.html  transferd-config.schema.json
docs/: common.css  index.css  index.html  index.js  openapi.css  openapi.html  openapi.js
go/: Makefile  go.mod  go.sum
go/src/examples/: faspex5.go  server.go
go/src/utils/: configuration.go  rest.go  server.go
golang/: Makefile  README.md  go.mod  go.sum
golang/src/examples/: server.go  server_cmd.go
golang/src/utils/: configuration.go  server.go  transfer_client.go
java/: .gitignore  .project  Makefile  README.md  build.gradle  logging.properties  settings.gradle
java/src/main/java/client/: COSFileUploadExample.java  EncryptionUtils.java  Faspex5Send.java  PersistentUploadExample.java  Rest.java  ServerFileDownloadV2Example.java  ServerFileUploadV1Example.java  TestEnvironment.java
java/src/main/java/examples/: COSFileUploadExample.java  Faspex5Send.java  PersistentUploadExample.java  ServerFileDownloadV2Example.java  ServerFileUploadV1Example.java
java/src/main/java/utils/: Configuration.java  Rest.java  Tools.java  (+1 more)
js/: Makefile  cos.js  server.js  server_v2.js  test_environment.js
js/src/examples/: server.js
openapi/: IBM Aspera Faspex API-5.0-enhanced.yaml  IBM Aspera Faspex API-5.0.json  IBM Aspera Faspex API-5.0.yaml  IBM Aspera Node API-4.4.1.json  IBM Aspera Node API-4.4.1.yaml  IBM Aspera Node API-4.4.6.yaml  IBM Aspera faspio Gateway API-1.0.0.json  IBM Aspera faspio Gateway API-1.0.0.yaml  IBM Aspera on Cloud API-0.2.6-enhanced.yaml  IBM Aspera on Cloud API-0.2.6.json  IBM Aspera on Cloud API-0.2.6.yaml  IBM_Aspera_Shares.yaml  menu.css  menu.html  menu.js  package.json  update.js
openapi/pages/: index.html  index.js  menu.css  menu.html
python/: Makefile  README.md
python/src/: aoc.py  cos.py  cos2.py  cos_node_api.py  cos_v2.py  faspex.py  faspex5.py  helper_aspera_cos.py  helper_aspera_faspmanager.py  helper_aspera_faspmanager_deprecated.py  helper_aspera_transfer_sdk.py  node.py  node_v2.py  requirements.txt  server.py  shares.py  shares_v2.py  test_environment.py
python/src/examples/: aoc.py  cos.py  faspex.py  faspex5.py  node.py  shares.py
python/src/utils/: configuration.py  helper_aspera_cos.py  rest.py  test_environment.py  tools.py  transfer_client.py
ruby/: Gemfile  Makefile
ruby/lib/: test_environment.rb
ruby/src/: aoc.rb  faspex4.rb  faspex5.rb  node.rb  server.rb
ruby/src/examples/: faspex4.rb  faspex5.rb  node.rb  server.rb
ruby/src/utils/: configuration.rb  test_environment.rb
rust/: Cargo.toml  Makefile  README.md  build.rs
rust/src/examples/: aoc.rs  faspex5.rs  server.rs  server_cmd.rs
rust/src/utils/: configuration.rs  mod.rs  rest.rs  server.rs  transfer_client.rs
web/: .gitignore  Makefile  README.md  index.html  package.json  tsconfig.client.json  vite.config.ts
web/doc/: diagrams.pptx
web/javascript-html/: .gitignore  Makefile  README.md  index.html  package.json  tsconfig.server.json  vite.config.ts
web/javascript-html/public/: index.html
web/javascript-html/src/: client.js  index.html  server.js  styles.css
web/javascript-html/src/client/: client.ts
web/javascript-html/src/server/: server.ts
web/public/: styles.css
web/src/: browser_app.js  client.js  index.html  server.js  styles.css
web/src/client/: client.ts
web/src/server/: server.ts
web/webroot/: client.js  styles.css
(+11 files in other folders)
