[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.2"
tonic = "0.9"
tokio = { version = "1", features = ["full"] }
prost = "0.11"

[build-dependencies]
tonic-build = "0.9" # Add this line to include tonic_build

[[bin]]
name = "server"
path = "src/examples/server.rs"
