[package]
name = "samples"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.2"
tonic = "0.9"
tokio = { version = "1", features = ["full"] }
prost = "0.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
jsonwebtoken = "8.1"
uuid = { version = "1.3", features = ["v4"] }
anyhow = "1.0"
regex = "1.7"
ssh2 = "0.9.4"

[build-dependencies]
tonic-build = "0.9"

[[bin]]
name = "server"
path = "src/examples/server.rs"
[[bin]]
name = "faspex5"
path = "src/examples/faspex5.rs"
[[bin]]
name = "aoc"
path = "src/examples/aoc.rs"
[[bin]]
name = "server_cmd"
path = "src/examples/server_cmd.rs"

